# twitter-mini-rs

./: Cargo.toml  Dockerfile  Dockerfile-old  README.md  docker-compose.yml
sql/: 01-init.sql
src/: app_state.rs  lib.rs  log.rs  main.rs
src/api/: mod.rs  tweet.rs  user.rs
src/auth/: jwt.rs
src/config/: mod.rs
src/domain/: mod.rs  tweet_service.rs  user_service.rs
src/entities/: mod.rs  prelude.rs  tweets.rs  users.rs
src/errors/: error.rs  mod.rs
src/log/: mod.rs
src/middleware/: jwt_extractor.rs  mod.rs
src/middlewares/: jwt_extractor.rs
src/repositories/: mod.rs  user_repo.rs
src/repository/: tweet_repo.rs
src/routes/: mod.rs  tweet.rs  user.rs
src/services/: tweet_service.rs  user_service.rs
