[package]
name = "twitter_mini_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Axum & Tower
axum = "0.7.9"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["limit", "buffer"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
hyper = { version = "0.14", features = ["full"] }

# -- SeaORM & Postgres
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
# sea-orm-derive = "0.11"
sea-query = "0.30"

# -- Redis
redis = "0.22"
deadpool-redis = "0.10"

# -- JWT / Auth
jsonwebtoken = "8"
chrono = "0.4"
bcrypt = "0.12"

# -- Serde / Env / Others
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# -- Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2.3"
moka = { version = "0.12.8", features = ["sync"] }

